--- a/theme/boost/style/moodle.css
+++ b/theme/boost/style/moodle.css
@@ -4134,6 +4134,7 @@ textarea.form-control {
   font-weight: 400;
   color: #212529;
   text-align: center;
+  white-space: nowrap;
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
